tests/negative/Bad-Case-Import-Other.toit
// Copyright (C) 2025 Toit contributors.
// Use of this source code is governed by a Zero-Clause BSD license that can
// be found in the tests/LICENSE file.

// The imported file has the filename 'Bad-Case-Import-Other.toit' which
// is acceptable on Windows and macOS, but not on Linux.

foo: return 42
